added bookmarks to view

--- a/src/style.css
+++ b/src/style.css
@@ -4,5 +4,14 @@ body{
     flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+.bookmark-collapsed {
+    display: none;
+}
+
+.bookmark-expanded {
+    
 }
 
